[model] clean up code